--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   flutter_localizations:
     sdk: flutter
   intl: '>=0.16.1 <=0.17.0'
@@ -21,33 +21,28 @@ dependencies:
   # git:
   #  url: https://github.com/moovida/dart_hydrologis_db.git
   smashlibs:
-    path: ../smashlibs/
-    # git:
-    #   url: https://github.com/moovida/smashlibs.git
+    # path: ../smashlibs/
+    git:
+      url: https://github.com/moovida/smashlibs.git
       # ref: d273d6f
 
-  
   # apache 2
   flutter_geopackage: ^0.6.0
 
   dart_hydrologis_utils: ^0.6.1
-    # path: ../dart_hydrologis_utils/
+  # path: ../dart_hydrologis_utils/
   dart_jts: ^0.2.0
-    # path: ../dart_jts/
-
-
+  # path: ../dart_jts/
   xml: ^6.1.0 #xml: '>=4.5.1 <=5.3.1'
 
   # Apache 2.0
   gpx: ^2.2.0
-    # git:
-    #   url: https://github.com/moovida/dart-gpx.git
-    #   ref: "540e167"
-
+  # git:
+  #   url: https://github.com/moovida/dart-gpx.git
+  #   ref: "540e167"
   # Apache 2.0
   pdf: ^3.8.3
   # pdf: '>=2.1.0 <=3.6.0'
-
   # MIT
   provider: ^6.0.4
 
@@ -57,37 +52,46 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
-flutter:
+flutter: null
+flutter_intl:
+  enabled: true
+  arb-dir: lib/l10n
+  template-arb-file: intl_en.arb
+  output-localization-file: l10n.dart
+  output-class: IEL
+  class_name: IEL # Optional. Sets the name for the generated localization class. Default: S
+  synthetic-package: false
+  output-dir: lib/generated
+  preferred-supported-locales: en
+  nullable-getter: false
 
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
+# To add assets to your package, add an assets section, like this:
+# assets:
+#   - images/a_dot_burr.jpeg
+#   - images/a_dot_ham.jpeg
+#
+# For details regarding assets in packages, see
+# https://flutter.dev/assets-and-images/#from-packages
+#
+# An image asset can refer to one or more resolution-specific "variants", see
+# https://flutter.dev/assets-and-images/#resolution-aware.
+# To add custom fonts to your package, add a fonts section here,
+# in this "flutter" section. Each entry in this list should have a
+# "family" key with the font family name, and a "fonts" key with a
+# list giving the asset and other descriptors for the font. For
+# example:
+# fonts:
+#   - family: Schyler
+#     fonts:
+#       - asset: fonts/Schyler-Regular.ttf
+#       - asset: fonts/Schyler-Italic.ttf
+#         style: italic
+#   - family: Trajan Pro
+#     fonts:
+#       - asset: fonts/TrajanPro.ttf
+#       - asset: fonts/TrajanPro_Bold.ttf
+#         weight: 700
+#
+# For details regarding fonts in packages, see
+# https://flutter.dev/custom-fonts/#from-packages
