--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   smashlibs:
     # path: ../smashlibs/
     git:
-      url: https://github.com/moovida/smashlibs.git
+      url: https://github.com/dasaki-gr/smashlibs.git
+      # url: https://github.com/moovida/smashlibs.git
       # ref: d273d6f
 
   # apache 2
@@ -31,7 +32,7 @@ dependencies:
 
   dart_hydrologis_utils: ^0.6.1
   # path: ../dart_hydrologis_utils/
-  dart_jts: ^0.2.0
+  dart_jts: ^0.2.1+1
   # path: ../dart_jts/
   xml: ^6.1.0 #xml: '>=4.5.1 <=5.3.1'
 
